--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="script" href="src/codewars.js">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
             content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -31,18 +27,21 @@
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <script>
-    function pigIt(str) {
-        return str.split(' ')
-            .map(m => (m !== '?' && m !== ',' && m !== '.' && m !== '!')
-                ? m.slice(1) + m.slice(0, 1) + 'ay'
-                : m
-            )
-            .join(' ')
+    function validParentheses(parens) {
+        if (parens.length === 0) return true
+        else if (parens.includes('()')) {
+            return validParentheses(parens.replace('()', ''))
+        } else return false
+        /* let arr = parens.split('')
+         return arr.reduce((acc, item, index)=> {
+             if (item === '(' && arr[index] === ')') {
+
+             }
+         }, [])
+         return arr;*/
     }
 
-
-    console.log(pigIt('Pig latin is cool')) //igPay atinlay siay oolcay
-    console.log(pigIt('Hello ? world !')) //elloHay orldway !
+    console.log(validParentheses("(())((()())())"))
 </script>
 <!--
   This HTML file is a template.
